--- a/life.html
+++ b/life.html
@@ -6,9 +6,9 @@
   <title> Life by Di Trapani </title>
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
   <link rel="stylesheet" href="css/life.css" type="text/css" />
-  <script type="text/javascript" src="javascript/utils.js"></script>
-  <script type="text/javascript" src="javascript/cell.js"></script>
-<script type="text/javascript" src="javascript/life.js"></script>
+  <script type="text/javascript" src="js/ljd-utils.js"></script>
+  <script type="text/javascript" src="js/cell.js"></script>
+<script type="text/javascript" src="js/life.js"></script>
 </head>
 
 <body>
