--- a/life.html
+++ b/life.html
@@ -7,7 +7,10 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
   <link rel="stylesheet" href="css/life.css" type="text/css" />
   <script type="text/javascript" src="js/ljd-utils.js"></script>
-<script type="text/javascript" src="js/life.js"></script>
+  <script type="text/javascript" src="js/life.js"></script>
+  <script>
+    window.onload = ljd.life.main;
+  </script>
 </head>
 
 <body>
