--- a/spec.html
+++ b/spec.html
@@ -10,7 +10,9 @@
 
 <body>
   <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
+  <div id="qunit-fixture">
+    <div id="grid"></div>
+  </div>
   <script src="lib/qunit.js" type="text/javascript"> </script>
   <script src="lib/coffee-script.js" type="text/javascript"> </script>
   <script src="js/ljd-utils.js" type="text/javascript"> </script>
