Prevent multiple Start or Stop clicks
BUG:  pressing start multiple times creates multiple calls to
setInterval, but each call overwrites the life.id used to clear the
interval.  So it is impossible to stop the iterations.
Fix:  Only have one button enabled at a time.  First, start is enabled
and stop is disabled.  Presing start togles start off and stop on and
vice versa.

--- a/life.html
+++ b/life.html
@@ -18,7 +18,7 @@
   <div id='grid'></div>
   <div class='buttons'>
     <input type='button' id='startButton' value='Start' />
-    <input type='button' id='stopButton' value='Stop' />
+    <input type='button' id='stopButton' value='Stop' disabled />
   </div>
 </body>
 
